<resources>
    <string name="app_name">CircleFinder</string>
    <string name="txtRenkei">Twitter連携で始める\nサークルチェック</string>
    <string name="privacy_policy_url">http://blog.livedoor.jp/kcstock/archives/53420989.html</string>
    <string name="privacy_policy_dialog">プライバシーポリシーを表示</string>
    <string name="privacy_policy">Application Privacy Policy</string>
    <string name="privacy_policy_ja">プライバシーポリシー</string>
    <string name="yes">アカウントとつながる</string>
    <string name="no">No</string>
    <string name="twitter">Twitter</string>
    <string name="kcpoipoi">\@kcpoipoi</string>

    <!--OAuth認証関係-->
    <string name="consumer_key">reqGaYmF6UgKSzckijUAU48WB</string>
    <string name="consumer_secret">9yqqVOFsIfeSjdXEj99fyvqvdPKxAHhmdni4q93AKwGl61quCD</string>
    <string name="callback_url">twittercallback://twitter</string>
    <string name="authorize_error">認証失敗</string>
    <string name="accesstoken_error">アカウントが取得できませんでした</string>
    <string name="accesstoken_success">Twitter連携完了！</string>
    <!--CircleFinder Keys-->
    <!--<string name="consumer_key">kgkYh0gV73VxwzFmgSvRCUO4C</string>-->
    <!--<string name="consumer_secret">1m6IWyOPEpxgvMSuWgpHtbr0FUAf8ntOweo8cXm4EyvR9omjWU</string>-->

    <!--StickyListLayout関係-->
    <string name="circle_space_hint">スペース</string>
    <string name="busuu_hint">部数</string>
    <string name="yosan_hint">予算</string>
    <string name="memo_hint">メモ</string>
    <string name="date">日にち</string>
    <string name="profile_url">"twitter://user?screen_name="</string>
    <string name="nichime">日目</string>
    <string name="unknown">日にち不明</string>
    <string name="accounts">アカウント</string>
    <string name="pickup">買物リスト</string>
    <string name="achievement">達成率</string>
    <string name="achieve_ratio">達成率は...</string>
    <string name="search_title">検索</string>
    <string name="circle_name">サークル名</string>

    <!--Dialog関係-->
    <string name="loading">データ取得中です...</string>
    <string name="cancel_now">Cancel Now...</string>
    <string name="cancel">cancel</string>
    <string name="target">対象</string>
    <string name="yen">円</string>
    <string name="dialog_title">情報を入力</string>
    <string name="clear_message">ユーザ入力情報をクリアします。\n（サークル名は消去されません）</string>
    <string name="clear_got_data">取得したデータをクリアします。\n（自身のアカウント情報は消去されません）</string>
    <string name="clear_got_data_success">データのクリア成功</string>
    <string name="clear_got_data_miss">データのクリア失敗</string>

    <!--メニュー関係-->
    <string name="clear">クリア</string>
    <string name="reload">更新</string>
    <string name="search">検索</string>
    <string name="settings">設定</string>

    <!--ターゲット選択-->
    <string name="new_release">新刊</string>
    <string name="new_and_published">新既刊</string>
    <string name="published">既刊</string>
    <string name="other">その他</string>
    <string-array name="target_spinner">
        <item>@string/new_release</item>
        <item>@string/new_and_published</item>
        <item>@string/published</item>
        <item>@string/other</item>
    </string-array>

    <!--SearchActivity-->
    <string name="search_activity">アカウントを検索</string>
    <string name="search_word">名前orスクリーン名orサークル名</string>

    <!--DrawerLayout-->
    <string name="total_yosan">選択中リストの予算</string>
    <string name="all_follow">フォロー一覧</string>
    <string name="account_name">アカウント名</string>
    <string name="zero_yen">0円</string>
    <string name="subscribe_list">リストを追加</string>

    <!--設定画面-->
    <string name="category_filter_title">イベントフィルタ</string>
    <string name="switch_pref_title">フィルタの有効化</string>
    <string name="switch_pref_summary">設定したフィルタが有効になります。\nOFFにするとコミケ用のフィルタになります。</string>
    <string name="filter">フィルタ</string>
    <string name="filter_info">フィルタ情報</string>
    <string name="filter_name_title">フィルタ名</string>
    <string name="filter_text_title">フィルタワード</string>
    <string name="filter_text_eg">コミティア など</string>
    <string name="clear_filter">フィルタのクリア</string>
    <string name="clear_filter_message">フィルタを消去します。\nよろしいですか？</string>
    <string name="filter_or_search">「 , 」区切りでOR検索ができます</string>
    <string name="how_to">使い方</string>
    <string name="clear_data">ユーザ情報のクリア</string>
    <string name="clear_data_summary">取得したユーザ情報を削除します。</string>
    <string name="visible_all_user">全てのユーザを表示</string>
    <string name="visible_all_user_summary">OFFにすると配置を取得できたユーザのみ表示します。</string>
    <string name="how_to_text">
        <b>最初に「更新」をしてみてください！\n作成済のリストがドロワーに表示されます。</b>\n\n

        ①夏コミ・冬コミサークル参加者の取得\n
        フィルタを無効化した状態で、更新を実行します。\n
        \n
        ②特定の即売会参加者の取得\n
        （１）フィルタワードを設定し、チェックボックスにチェックを入れます。\n
        （２）フィルタを有効にします。\n
        （３）更新を実行すると、フィルタワードにマッチするアカウントが取得されます。\n
        \n
        ③一度取得したアカウントについて\n
        イベント後にサークルスペースが削除されても、その他欄に表示をします。\n
        「全てのユーザを表示」を無効にすると、サークルスペースが表示されているアカウントのみ表示します。\n\n

        ◎アカウントの取得における前提条件\n
        サークルスペース（「A01a」「あ01ab」等）を表示していないアカウントは取得できませんのでご留意ください。\n
    </string>

    <!--その他-->
    <string name="no_client">There are no Twitter client.</string>
</resources>
