<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/toolbar_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:visible="false"/>
    <item
        android:id="@+id/toolbar_search_sub"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/toolbar_reload"
        android:icon="@drawable/reload"
        android:title="@string/reload"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toolbar_clear"
        android:title="@string/clear"
        app:showAsAction="never"/>
    <item
        android:id="@+id/toolbar_preferences"
        android:title="@string/settings"
        app:showAsAction="never"/>




</menu>