<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="name"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

    <TextView
        android:id="@+id/circle_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="space"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/hole_name"
        app:layout_constraintStart_toEndOf="@+id/hole_name" />

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/target"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/busuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/busuu_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/target" />

    <TextView
        android:id="@+id/yosan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/yosan_hint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/busuu" />

    <Spinner
        android:id="@+id/target_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:entries="@array/target_spinner"
        app:layout_constraintBottom_toBottomOf="@+id/target"
        app:layout_constraintStart_toEndOf="@+id/target"
        app:layout_constraintTop_toTopOf="@+id/target" />

    <EditText
        android:id="@+id/yosan_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="1000"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/yosan"
        app:layout_constraintEnd_toEndOf="@+id/plus"
        app:layout_constraintStart_toStartOf="@+id/target_spinner"
        app:layout_constraintTop_toTopOf="@+id/yosan" />

    <EditText
        android:id="@+id/memo_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/memo_hint"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/yosan_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toTopOf="@+id/target_spinner" />

    <TextView
        android:id="@+id/busuu_value"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:maxLength="2"
        android:text="1"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/busuu"
        app:layout_constraintStart_toStartOf="@+id/target_spinner"
        app:layout_constraintTop_toTopOf="@+id/busuu" />

    <ImageView
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/plus"

        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/busuu_value"
        app:layout_constraintStart_toEndOf="@+id/busuu_value"
        app:layout_constraintTop_toTopOf="@+id/busuu_value" />

    <ImageView
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:src="@drawable/minus"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/plus"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toTopOf="@+id/plus" />

    <TextView
        android:id="@+id/yen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1"
        android:text="@string/yen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/yosan_value"
        app:layout_constraintStart_toEndOf="@+id/yosan_value" />

    <TextView
        android:id="@+id/hole_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
        app:layout_constraintStart_toEndOf="@+id/profile_image" />

</android.support.constraint.ConstraintLayout>